(sandberg) External: Added a simple server application which can receive the log-entries via WiFi on the PC. (r729)
BUG FIXES
(sandberg) 3DUI: The active item are now default selected when entering the option screen. (r728)
(sandberg) 3DUI: The program version is now only shown on the option screen when using the 3D UI (r727)
(sandberg) 3DUI: Fixed a couple of bug which caused the UI to read random data (r730)

0.38-Pre1
NEW FEATURES
(sandberg) Core/3DUI: Merged the new TextUI3D into the main branch. (r712)
(sandberg) Core: Support for USB enabled/disabled events to the UIs has been added. (r712)
(raf) Core: Added code to sort all lists (localfiles/playlists/SHOUTcast listings) alphabetically in ascending order (r713)
(sandberg) 3DUI: Made the graphics in the new UI configurable, to allow new skins to be made. (r716)
(raf) Core Now duplicates are eliminated from SHOUTcast listing genres. Duplicates are looked for in case insensitive mode. (r717)
(raf) Core: Top 600 listing is now left unsorted (so it stays sorted by popularity). (r718)
(raf) TextUI: Clock format (12/24) is now retrieved from the system settings, and the config option is not used anymore. (r719)
(sandberg) 3DUI: New graphics from Semtex integrated. (r720)
(raf) Core: Now SHOUTcast Titles are parsed and corrected to display & instead of #amp; and the correct character for &#XX; (r721)
(raf) Core:  Refactoring/ Added option to select directory for localfiles in the config file. (r724)
BUG FIXES
(raf) Core: Removed the config option to turn logging on/off. Just use log levels.
(sandberg) 3DUI: shutdown screen are now shown on the new UI. (r720)
(sandberg) 3DUI: IP number and program title are shown after switching UIs. (r720)

0.37-Final (r706) (2006-01-16) (svn.berlios.de/svnroot/repos/pspradio/Releases/PSPRadio0.37/)
NEW FEATURES
(raf) TextUI: Added a new config element to specify the length of the metadata.
(raf) GraphicsUI: Removed from the build as it doesn't work correctly with the current core.