@@ -1,17 +1,17 @@
-/* 
+/*
 	PSPApp C++ OO Application Framework. (Initial Release: Sept. 2005)
 	Copyright (C) 2005  Rafael Cabezas a.k.a. Raf
-	
+
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
 	as published by the Free Software Foundation; either version 2
 	of the License, or (at your option) any later version.
-	
+
 	This program is distributed in the hope that it will be useful,
 	but WITHOUT ANY WARRANTY; without even the implied warranty of
 	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 	GNU General Public License for more details.
-	
+
 	You should have received a copy of the GNU General Public License
 	along with this program; if not, write to the Free Software
 	Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
@@ -19,7 +19,7 @@
 #include <list>
 #include <PSPApp.h>
 #include <stdio.h>
-#include <unistd.h> 
+#include <unistd.h>
 #include <stdlib.h>
 #include <string.h>
 #include <limits.h>
@@ -41,7 +41,8 @@ CPSPSoundBuffer::CPSPSoundBuffer()
 	m_NumBuffers 		= DEFAULT_NUM_BUFFERS; /** Configurable via config-file. Should be from 20 - 100 or so.. test! */
 	m_BufferListMaxSize	= m_NumBuffers;
 	m_DeviceBufferCount	= 0; /** Used for buffer percentage */
-	
+	m_LastDeviceBufferCount = 100; /** just has to be different from zero */
+
 	m_DeviceBuffer		= (DeviceBuffer *)memalign(64, sizeof(DeviceBuffer));
 	m_EmptyDeviceBuffer	= (DeviceBuffer *)memalign(64, sizeof(DeviceBuffer));
 
@@ -60,24 +61,25 @@ CPSPSoundBuffer::~CPSPSoundBuffer()
 }
 
 /*Takes the number of PSP sound buffers 20~100. If not changed, defaults to DEFAULT_NUM_BUFFERS.*/
-void CPSPSoundBuffer::ChangeBufferSize(size_t buffer_size) 
+void CPSPSoundBuffer::ChangeBufferSize(size_t buffer_size)
 {
 	Log(LOG_VERYLOW, "ChangeBufferSize(%d) Called.", buffer_size);
-	m_BufferListMaxSize = m_NumBuffers;	
+	m_BufferListMaxSize = m_NumBuffers;
 	Empty();
 }
 
-void  CPSPSoundBuffer::Empty() 
-{ 
+void  CPSPSoundBuffer::Empty()
+{
 	Log(LOG_VERYLOW, "CPSPSoundBuffer::Empty() Called.");
 	m_DeviceBufferList.clear();
 	m_bBuffering = true;
 	m_mult = m_div = 1;
 	m_DeviceBufferCount = 0; /** Used for buffer percentage */
+	m_LastDeviceBufferCount = 100; /** just has to be different from zero */
 }
 
-size_t CPSPSoundBuffer::GetBufferFillPercentage() 
-{ 
+size_t CPSPSoundBuffer::GetBufferFillPercentage()
+{
 	return 100*m_DeviceBufferCount/m_BufferListMaxSize;
 };
 
@@ -133,12 +135,12 @@ void CPSPSoundBuffer::PushPCMFrame(Frame &frame) /** Push a frame at an arbitrar
 	static size_t iDiv = 0;
 	static DeviceBuffer buffer;
 	static size_t buffer_index = 0;
-	
+
 	while ( (m_DeviceBufferCount == m_BufferListMaxSize) && (0 == pPSPSound->GetEventToDecThSize()) )
-	{ 
+	{
 		sceKernelDelayThread(50); /** 50us */
 	}
-	
+
 	for (size_t iMult = 0; iMult < m_mult; iMult++)
 	{
 		iDiv++;
@@ -153,11 +155,16 @@ void CPSPSoundBuffer::PushPCMFrame(Frame &frame) /** Push a frame at an arbitrar
 			}
 		}
 	}
-	
+
 	if ((clock()*1000/CLOCKS_PER_SEC - timeLastPercentEvent) > 333) /** 3 times per sec */
 	{
-		pPSPSound->SendEvent(MID_BUFF_PERCENT_UPDATE);
-		timeLastPercentEvent = clock()*1000/CLOCKS_PER_SEC;
+		/* If the buffer count has changed we should send an event */
+		if (m_LastDeviceBufferCount != m_DeviceBufferCount)
+		{
+			m_LastDeviceBufferCount = m_DeviceBufferCount;
+			pPSPSound->SendEvent(MID_BUFF_PERCENT_UPDATE);
+			timeLastPercentEvent = clock()*1000/CLOCKS_PER_SEC;
+		}
 	}
 }
 
@@ -176,7 +183,7 @@ DeviceBuffer *CPSPSoundBuffer::PopDeviceBuffer()
 	{
 		/** Buffer Empty!! */
 		while ( (0 == m_DeviceBufferCount) && (0 == pPSPSound->GetEventToPlayThSize()) )
-		{	
+		{
 			sceKernelDelayThread(50); /** 50us */
 			m_bBuffering = true;
 		}
